src/styles/flags.css
span.flag {
    width: 44px;
    height: 30px;
    display: inline-block
}

img.flag {
    width: 30px
}

.flag {
    background: url(../assets/flags_responsive.png) no-repeat;
    background-size: 100%
}

.flag-ad {
    background-position: 0 .413223%
}

.flag-ae {
    background-position: 0 .826446%
}

.flag-af {
    background-position: 0 1.239669%
}

.flag-ag {
    background-position: 0 1.652893%
}

.flag-ai {
    background-position: 0 2.066116%
}

.flag-al {
    background-position: 0 2.479339%
}

.flag-am {
    background-position: 0 2.892562%
}

.flag-an {
    background-position: 0 3.305785%
}

.flag-ao {
    background-position: 0 3.719008%
}

.flag-aq {
    background-position: 0 4.132231%
}

.flag-ar {
    background-position: 0 4.545455%
}

.flag-as {
    background-position: 0 4.958678%
}

.flag-at {
    background-position: 0 5.371901%
}

.flag-au {
    background-position: 0 5.785124%
}

.flag-aw {
    background-position: 0 6.198347%
}

.flag-az {
    background-position: 0 6.61157%
}

.flag-ba {
    background-position: 0 7.024793%
}

.flag-bb {
    background-position: 0 7.438017%
}

.flag-bd {
    background-position: 0 7.85124%
}

.flag-be {
    background-position: 0 8.264463%
}

.flag-bf {
    background-position: 0 8.677686%
}

.flag-bg {
    background-position: 0 9.090909%
}

.flag-bh {
    background-position: 0 9.504132%
}

.flag-bi {
    background-position: 0 9.917355%
}

.flag-bj {
    background-position: 0 10.330579%
}

.flag-bm {
    background-position: 0 10.743802%
}

.flag-bn {
    background-position: 0 11.157025%
}

.flag-bo {
    background-position: 0 11.570248%
}

.flag-br {
    background-position: 0 11.983471%
}

.flag-bs {
    background-position: 0 12.396694%
}

.flag-bt {
    background-position: 0 12.809917%
}

.flag-bv {
    background-position: 0 13.22314%
}

.flag-bw {
    background-position: 0 13.636364%
}

.flag-by {
    background-position: 0 14.049587%
}

.flag-bz {
    background-position: 0 14.46281%
}

.flag-ca {
    background-position: 0 14.876033%
}

.flag-cc {
    background-position: 0 15.289256%
}

.flag-cd {
    background-position: 0 15.702479%
}

.flag-cf {
    background-position: 0 16.115702%
}

.flag-cg {
    background-position: 0 16.528926%
}

.flag-ch {
    background-position: 0 16.942149%
}

.flag-ci {
    background-position: 0 17.355372%
}

.flag-ck {
    background-position: 0 17.768595%
}

.flag-cl {
    background-position: 0 18.181818%
}

.flag-cm {
    background-position: 0 18.595041%
}

.flag-cn {
    background-position: 0 19.008264%
}

.flag-co {
    background-position: 0 19.421488%
}

.flag-cr {
    background-position: 0 19.834711%
}

.flag-cu {
    background-position: 0 20.247934%
}

.flag-cv {
    background-position: 0 20.661157%
}

.flag-cx {
    background-position: 0 21.07438%
}

.flag-cy {
    background-position: 0 21.487603%
}

.flag-cz {
    background-position: 0 21.900826%
}

.flag-de {
    background-position: 0 22.31405%
}

.flag-dj {
    background-position: 0 22.727273%
}

.flag-dk {
    background-position: 0 23.140496%
}

.flag-dm {
    background-position: 0 23.553719%
}

.flag-do {
    background-position: 0 23.966942%
}

.flag-dz {
    background-position: 0 24.380165%
}

.flag-ec {
    background-position: 0 24.793388%
}

.flag-ee {
    background-position: 0 25.206612%
}

.flag-eg {
    background-position: 0 25.619835%
}

.flag-eh {
    background-position: 0 26.033058%
}

.flag-er {
    background-position: 0 26.446281%
}

.flag-es {
    background-position: 0 26.859504%
}

.flag-et {
    background-position: 0 27.272727%
}

.flag-fi {
    background-position: 0 27.68595%
}

.flag-fj {
    background-position: 0 28.099174%
}

.flag-fk {
    background-position: 0 28.512397%
}

.flag-fm {
    background-position: 0 28.92562%
}

.flag-fo {
    background-position: 0 29.338843%
}

.flag-fr {
    background-position: 0 29.752066%
}

.flag-ga {
    background-position: 0 30.165289%
}

.flag-gd {
    background-position: 0 30.578512%
}

.flag-ge {
    background-position: 0 30.991736%
}

.flag-gf {
    background-position: 0 31.404959%
}

.flag-gh {
    background-position: 0 31.818182%
}

.flag-gi {
    background-position: 0 32.231405%
}

.flag-gl {
    background-position: 0 32.644628%
}

.flag-gm {
    background-position: 0 33.057851%
}

.flag-gn {
    background-position: 0 33.471074%
}

.flag-gp {
    background-position: 0 33.884298%
}

.flag-gq {
    background-position: 0 34.297521%
}

.flag-gr {
    background-position: 0 34.710744%
}

.flag-gs {
    background-position: 0 35.123967%
}

.flag-gt {
    background-position: 0 35.53719%
}

.flag-gu {
    background-position: 0 35.950413%
}

.flag-gw {
    background-position: 0 36.363636%
}

.flag-gy {
    background-position: 0 36.77686%
}

.flag-hk {
    background-position: 0 37.190083%
}

.flag-hm {
    background-position: 0 37.603306%
}

.flag-hn {
    background-position: 0 38.016529%
}

.flag-hr {
    background-position: 0 38.429752%
}

.flag-ht {
    background-position: 0 38.842975%
}

.flag-hu {
    background-position: 0 39.256198%
}

.flag-id {
    background-position: 0 39.669421%
}

.flag-ie {
    background-position: 0 40.082645%
}

.flag-il {
    background-position: 0 40.495868%
}

.flag-in {
    background-position: 0 40.909091%
}

.flag-io {
    background-position: 0 41.322314%
}

.flag-iq {
    background-position: 0 41.735537%
}

.flag-ir {
    background-position: 0 42.14876%
}

.flag-is {
    background-position: 0 42.561983%
}

.flag-it {
    background-position: 0 42.975207%
}

.flag-jm {
    background-position: 0 43.38843%
}

.flag-jo {
    background-position: 0 43.801653%
}

.flag-jp {
    background-position: 0 44.214876%
}

.flag-ke {
    background-position: 0 44.628099%
}

.flag-kg {
    background-position: 0 45.041322%
}

.flag-kh {
    background-position: 0 45.454545%
}

.flag-ki {
    background-position: 0 45.867769%
}

.flag-km {
    background-position: 0 46.280992%
}
/* ... */

